增加上传文件类型检查，优化代码，处理兼容性问题

--- a/jigsaw/index.html
+++ b/jigsaw/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta name="keywords" content="jigsaw, game, js">
         <title>拼图游戏</title>
-        <link rel="stylesheet" href="src/style.css"></link>
+        <link rel="shotcut icon" href="http://192.168.30.1:8080/favicon.ico" />
+        <link rel="stylesheet" type="text/css" href="src/style.css" />
         <script type="text/javascript" src="src/main.js"></script>
     </head>
     <body>
@@ -25,17 +26,15 @@
                                 <input type="file" id="upload-btn" class="file-btn"/>
                             </div>
                         </div>
-                        <button class="start-btn class="mar-t10"" onclick="reRender()">重新开始</button>
+                        <button class="start-btn" class="mar-t10" onclick="reRender()">重新开始</button>
                     </div>
                 </div>
                 <div class="part f-start">
-                    <div class="right">
-                    </div>
+                    <div class="right"></div>
                 </div>
             </header>
             <div class="main">
-                <div class="pic">
-                </div>
+                <div class="pic"></div>
             </div>
         </div>
     </body>
