所有功能开发完成

--- a/jigsaw/index.html
+++ b/jigsaw/index.html
@@ -6,18 +6,27 @@
         <title>拼图游戏</title>
         <link rel="shotcut icon" href="http://192.168.30.1:8080/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="src/style.css" />
+        <link rel="stylesheet" type="text/css" href="res/icomoon/style.css" />
         <script type="text/javascript" src="src/main.js"></script>
     </head>
     <body>
         <div class="wrapper">
             <header class="action">
-                <div class="part f-end">
+                <div class="part">
                     <div class="left">
                         <div class="mar-t10">
                             <label>拼图规格：</label>
-                            <input type="number" id="column" class="size" />
+                            <div class="number-input">
+                                <input type="text" id="column" class="size" readonly />
+                                <i class="icon_drop_up drop-icon up-icon" onclick="changeBlocksNum(event)"></i>
+                                <i class="icon_drop_down drop-icon down-icon" onclick="changeBlocksNum(event)"></i>
+                            </div>
                             <span>*</span>
-                            <input type="text" id="row" class="size" />
+                            <div class="number-input">
+                                <input type="text" id="row" class="size" readonly />
+                                <i class="icon_drop_up drop-icon up-icon" onclick="changeBlocksNum(event)"></i>
+                                <i class="icon_drop_down drop-icon down-icon" onclick="changeBlocksNum(event)"></i>
+                            </div>
                         </div>
                         <div class="mar-t10">
                             <label>上传图片：</label>
@@ -29,9 +38,9 @@
                         <button class="start-btn" class="mar-t10" onclick="reRender()">重新开始</button>
                     </div>
                 </div>
-                <div class="part f-start">
+                <!-- <div class="part f-start">
                     <div class="right"></div>
-                </div>
+                </div> -->
             </header>
             <div class="main">
                 <div class="pic"></div>
