面向对象编程思想refine code

--- a/jigsaw/index.html
+++ b/jigsaw/index.html
@@ -7,6 +7,7 @@
         <link rel="shotcut icon" href="http://192.168.30.1:8080/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="src/style.css" />
         <link rel="stylesheet" type="text/css" href="res/icomoon/style.css" />
+        <script type="text/javascript" src="src/Block.js"></script>
         <script type="text/javascript" src="src/main.js"></script>
     </head>
     <body>
